@@ -2,6 +2,9 @@ bzr-svn 0.4.11	UNRELEASED
 
   BUG FIXES
 
+   * Fix case insensitive handling of paths in 
+     CachingLogWalker.find_latest_change(). (#233964)
+
    * Fix compatibility with newer versions of Subversion. (#229419)
 
    * Deal with parent branch changing name in Repository.iter_changes().
